--- a/style.css
+++ b/style.css
@@ -12,31 +12,54 @@ header {
     border-top: 8px solid #e13868;
     height: 80px;
     width: 100%;
-   /*  position: fixed; */
+    /*  position: fixed; */
 
     display: flex;
     justify-content: space-between;
     place-items: center;
     padding: 0 65px;
+    position: relative;
+    z-index: 99;
 
     background: linear-gradient(180deg, #fff, transparent);
 }
+
 header .logo {
     font-size: 70px;
     font-weight: 900;
     text-transform: uppercase;
 }
+
 header .social-links a svg {
     transition: .5s ease;
+}
+@media (min-width:380px) and (max-width:1350px) {
+    header .social-links {
+        display: none
+    }
+    .banner-principal {
+        padding-top: 150px !important;
+    }
+    .nav-bar {
+        display: none
+    }
+    .header__btn-menu {
+        display: block !important;
+    }
+    .header__navigation.open {
+        width: calc(100% - 100px) !important;
+    }
 }
 header .social-links a:hover svg {
     fill: #eb3768;
 }
-.nav-bar ul{
+
+.nav-bar ul {
     display: flex;
     width: 800px;
     justify-content: space-between;
 }
+
 .nav-bar ul li {
     list-style: none;
     font-size: 28px;
@@ -45,10 +68,12 @@ header .social-links a:hover svg {
     padding-bottom: 4px;
     position: relative;
 }
+
 .nav-bar ul li a {
     text-decoration: none;
     color: #1A2C3A;
 }
+
 .nav-bar ul li::before {
     background-image: url(./images/linha-inferior.svg);
     background-position: 50%;
@@ -63,6 +88,7 @@ header .social-links a:hover svg {
     transition: .2s ease-in-out;
     width: 0;
 }
+
 .nav-bar ul li:hover::before {
     width: 50%;
 }
@@ -72,13 +98,23 @@ header .social-links a:hover svg {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-image: url(./images/banner-background.png), url(./images/Grupo\ 412.png);
+    background-repeat: no-repeat, no-repeat;
+    background-size: auto, cover;
+    background-position: right, center;
+    background-position-y: -25em, 0;
+    background-position-x: 46em, 0;
 
-    background: linear-gradient(0deg, #DF8080, transparent);
+    position: relative;
+    top: -75px;
+    padding-top: 100px;
 }
+
 .text-content {
     margin-left: 150px;
     margin-top: -70px;
 }
+
 .text-content h1 {
     font-size: 100px;
     text-align: left;
@@ -88,34 +124,49 @@ header .social-links a:hover svg {
     line-height: 85px;
     color: #1A2C3A;
     text-shadow: 4px 4px #df8080,
-                 8px 8px #fff;
+        8px 8px #fff;
+    position: relative;
 }
-.text-content h1::before {
+
+.text-content h1::after {
     background: #df8080;
     border-radius: 5px;
-    bottom: 42.5%;
+    
     content: "";
     height: 16px;
-    left: 150px;
+    left: 0;
+    bottom: -15%;
     position: absolute;
     width: 98px;
 }
+
 @media (max-width:376px) {
     .text-content h1::before {
         left: 25px !important;
         top: 250px !important;
     }
+
     header {
         padding: 0 30px;
     }
 }
+
 .text-content p {
     font-size: 20px;
-    max-width: 400px;
+    max-width: 425px;
     margin: 30px 0px 50px;
-    font-weight: 500px;
+    color: #1A2C3A;
+    font-weight: 700;
 }
-.text-content button/* , .featured-games button */ {
+
+.text-content p strong {
+    font-weight: 900;
+}
+
+.text-content button
+
+/* , .featured-games button */
+    {
     background: #eb3768;
     border: none;
     font-size: 25px;
@@ -125,13 +176,31 @@ header .social-links a:hover svg {
     border-radius: 15px 15px 35px 15px;
     cursor: pointer;
 }
+
 @media (max-width:376px) {
     .button-final {
-    top: -220px !important;
-}
+        top: -175px !important;
+    }
+    .btn {
+        width: 160px !important;
+        height: 46px !important;
+    }
+    .btn-normal {
+        font-size: 20px !important;
+    }
+    .btn-menor {
+        font-size: 18px !important;
+    }
+    .text-content p {
+        font-size: 18px;
+        line-height: 20px;
+        text-align: left;
+    }
 }
 
-
+h1, h2, h3 {
+    color: #1A2C3A;
+}
 
 .featured-games {
     display: flex;
@@ -140,23 +209,28 @@ header .social-links a:hover svg {
     align-items: center;
     margin-top: 50px;
 }
+
 .featured-games h1 {
     font-size: 65px;
     font-weight: 900;
 }
+
 .featured-games span {
-    font-weight: 500;
+    font-weight: 700;
+    color: #1A2C3A;
     font-size: 22px;
     text-align: center;
-    width: 650px;
-    margin-bottom: 35px;
+    width: 680px;
+    margin-bottom: 0;
 }
 
 .games-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 38px;
+    padding-top: 30px;
 }
+
 .game {
     border: 1px solid #EFF0F0;
     box-shadow: 12px 12px 30px #19191926;
@@ -170,12 +244,14 @@ header .social-links a:hover svg {
 
     margin-bottom: 100px;
 }
-.game .game-image.special img, 
+
+.game .game-image.special img,
 .game .game-image.rocket img,
 .game .game-image img {
     transition: all ease-in-out .3s;
 }
-.game:hover .game-image.special img, 
+
+.game:hover .game-image.special img,
 .game:hover .game-image.rocket img,
 .game:hover .game-image img {
     transform: scale(1.04) translate(-2%, -2%)
@@ -191,6 +267,7 @@ header .social-links a:hover svg {
 
     overflow: hidden;
 }
+
 .game-image img {
     width: 380px;
     height: auto;
@@ -198,16 +275,19 @@ header .social-links a:hover svg {
     filter: drop-shadow(2px 2px 7px #222);
     -webkit-filter: drop-shadow(2px 2px 7px #222);
 }
+
 .game-image.special {
     background-image: url(./images/Panda\ Pop_BG.png);
     background-position: center;
     background-size: cover;
 }
+
 .game-image.rocket img {
     width: 450px;
     position: relative;
     left: -25px;
 }
+
 .game-image.special img {
     width: 495px;
     position: relative;
@@ -220,11 +300,13 @@ header .social-links a:hover svg {
     font-weight: 900;
     text-align: center;
 }
-.game p{
+
+.game p {
     text-align: center;
     font-size: 16px;
     font-weight: 900;
 }
+
 .game p a {
     text-decoration: none;
     color: #e13868;
@@ -240,6 +322,7 @@ header .social-links a:hover svg {
 
     position: relative;
 }
+
 .dream-team button {
     z-index: 99;
     background: #eb3768;
@@ -253,54 +336,69 @@ header .social-links a:hover svg {
     position: relative;
     top: 240px;
 }
+
 .dream-team .team {
     display: flex;
     width: 100%;
     height: 800px;
     background: #F2F2F2;
     place-content: center;
+    margin-top: 100px;
+    padding-top: 30px;
+}
+.dream-team .team::before {
+    background-image: url(./images/Grupo\ 12.png);
+    content: "";
 }
 .team-text {
-    width: 675px;
+    width: 760px;
     text-align: center;
 }
+
 .team h2 {
     font-size: 72px;
     font-weight: 900;
     color: #1A2C3A;
 }
+.team span strong {
+    font-weight: 900;
+}
 .team span {
     font-size: 22px;
-    font-weight: 500;
+    font-weight: 700;
+    color: #1A2C3A;
 }
 
-.team-images img:nth-child(1) {
+/* .team-images img:nth-child(1) {
     position: absolute;
-    /* top: 270px; */
+    
     left: 270px;
     width: 25%;
     bottom: 80px;
-}
-.team-images img:nth-child(2) {
+} */
+
+/* .team-images img:nth-child(2) {
     width: 45%;
     position: absolute;
     top: 275px;
     left: 530px;
     z-index: 99;
 }
+
 .team-images img:nth-child(3) {
     width: 20%;
     position: absolute;
-    /* top: 240px; */
+    
     right: 268px;
     bottom: 80px;
 }
+
 .team-images img:nth-child(4) {
     width: 900px;
     position: absolute;
     top: 220px;
     right: 500px;
-}
+} */
 
 
 
@@ -328,7 +426,9 @@ header .social-links a:hover svg {
     text-transform: capitalize;
     width: 276px;
     opacity: 1 !important;
+    font-weight: 700;
 }
+
 .btn--effect:before {
     background-image: url(./images/btn-hover.svg);
     bottom: 0;
@@ -339,11 +439,13 @@ header .social-links a:hover svg {
     width: 0;
     background-size: cover
 }
+
 .btn--effect:after {
     content: "Let's Go";
     opacity: 0;
     text-transform: unset
 }
+
 .btn--effect:after,
 .btn--effect:before {
     pointer-events: none;
@@ -352,9 +454,11 @@ header .social-links a:hover svg {
     -o-transition: .3s ease-in-out;
     transition: .3s ease-in-out
 }
+
 .btn--hover-text:after {
     display: none
 }
+
 .btn--hover-text span {
     opacity: 0;
     pointer-events: none;
@@ -365,7 +469,7 @@ header .social-links a:hover svg {
     width: 100%;
     left: 0;
     text-align: center;
-    top: 15px;
+
     font-size: 30px;
 }
 
@@ -374,10 +478,12 @@ header .social-links a:hover svg {
     opacity: 1;
     z-index: 1
 }
+
 .btn:hover:before {
     pointer-events: all;
     width: 100%
 }
+
 .btn:hover:after {
     opacity: 1;
     pointer-events: all
@@ -403,6 +509,7 @@ footer .infos {
     align-items: center;
     place-content: center;
 }
+
 footer .location {
     width: 40%;
     background-image: url(./images/Grupo\ 15.png);
@@ -412,6 +519,7 @@ footer .location {
     display: flex;
     justify-content: center;
 }
+
 footer .location h2 {
     color: #fff;
     font-size: 34px;
@@ -420,6 +528,7 @@ footer .location h2 {
 
     margin-top: 60px;
 }
+
 .logo-footer {
     font-size: 120px;
     font-weight: 900;
@@ -428,18 +537,29 @@ footer .location h2 {
     margin-top: 25px;
     cursor: pointer;
 }
+
 .infos-right {
     display: flex;
 }
-.infos-right ul{
+.infos-right span {
+    position: absolute;
+    bottom: 0;
+    color: #fff;
+    width: 335px;
+    /* white-space: nowrap; */
+    font-size: 12px;
+}
+.infos-right ul {
     list-style: none;
     font-size: 24px;
     line-height: 40px;
 }
-.infos-right ul:nth-child(1){
+
+.infos-right ul:nth-child(1) {
     font-weight: 900;
     margin-right: 80px;
 }
+
 .infos-right ul li a {
     text-decoration: none;
     color: #fff;
@@ -459,148 +579,223 @@ footer .location h2 {
     transition: .2s ease-in-out;
     width: 0;
 }
+
 .infos-right ul li {
     position: relative;
     padding-bottom: 4px;
 }
+
 .infos-right ul li:hover::before {
     width: 40%;
 }
+
 .infos-left .social-links a svg {
     transition: .3s ease;
 }
+
 .infos-left .social-links a:hover svg {
     fill: #eb3768;
 }
 
 
 /* RESPONSIVO */
-
+@media (min-width:376px) and (max-width:1365px) {
+    .games-grid {
+        grid-template-columns: 1fr;
+    }
+}
 @media screen and (max-width:376px) {
+    .text-content h1::after {
+        height: 10px;
+        width: 80px;
+    }
     .games-grid {
         grid-template-columns: 1fr;
     }
 
     footer {
         flex-direction: column-reverse;
-        margin-top: 335px;
     }
-    footer .infos, footer .location {
+
+    footer .infos,
+    footer .location {
         width: 100%;
     }
-    .nav-bar, .social-links {
+    footer .location {
+        background-image: url(./images/Grupo\ 835.png);
+        height: 310px;
+    }
+    .nav-bar,
+    .social-links {
         display: none;
     }
+
     .banner-principal {
         display: block;
-        background:none;
+        background: none;
     }
+
     .text-content {
         margin-left: 0;
         margin-top: 0;
         text-align: justify;
+        padding: 0 35px;
     }
+
     .banner-image img {
         margin-left: 0 !important;
         margin-top: 0 !important;
         width: 100%;
     }
-    .text-content h1{
-        font-size: 46px;
+
+    header .logo img {
+        width: 80%;
+    }
+    .text-content h1 {
+        font-size: 42px;
         width: auto;
-        line-height: 50px;
+        line-height: 42px;
         text-shadow: 4px 4px #df8080;
         text-align: left;
     }
+
     .featured-games span {
         width: auto;
+        font-weight: 500;
+        font-size: 20px;
     }
+
     .game {
-        height: 440px;
+        height: 425px;
         margin-bottom: 50px;
     }
-    .game, .game-image {
+
+    .game,
+    .game-image {
         width: 300px;
     }
+
     .game-image {
         height: 350px;
     }
+
     .featured-games h1 {
-        font-size: 50px;
+        font-size: 42px;
         text-align: center;
     }
+
     .game-image img {
         width: 300px;
     }
+
     .game-image.special img {
         width: 340px;
         position: relative;
         top: 100px;
         left: 30px;
     }
+
     .game-image.rocket img {
         width: 350px;
         left: -25px;
         top: 40px;
     }
+
     .team-images img:nth-child(1) {
         width: 180px;
         left: 0;
         top: 270px;
     }
+
     .team-images img:nth-child(2) {
         width: 320px;
         left: 35px;
         top: 380px;
     }
+
     .team-images img:nth-child(3) {
         width: 130px;
         top: 275px;
         right: 0;
     }
+
     .dream-team .team {
         width: 100%;
         height: 800px;
         margin-bottom: 80px;
     }
+
     .dream-team button {
         top: -150px;
     }
+
     .team h2 {
         font-size: 36px;
     }
+
     .team-text {
         width: 375px;
     }
+
     footer .infos div {
         text-align: center;
         display: block !important;
         width: 100% !important;
         margin-top: 10px;
     }
+
     footer .infos {
         display: block;
         border-top: 1px solid #fff;
     }
+
     .infos-right {
         display: block;
     }
+
     .infos-right ul:nth-child(1) {
         margin-right: 0;
         margin-top: 30px;
-        margin-bottom: 50px;
+        margin-bottom: 35px;
     }
 
     .max-container {
         padding: 0 25px;
 
     }
+
     .games-grid {
         grid-gap: 0;
     }
+
+    .infos-right ul:nth-child(2) {
+        padding-bottom: 100px;
+    }
+
+    .infos-right span {
+        width: unset;
+        white-space: unset;
+        left: 0;
+        margin-bottom: 25px;
+        font-size: 15px;
+    }
+
+    .btn--hover-text span {
+        font-size: 20px;
+    }
+
+    .team span {
+        font-size: 20px;
+    }
+    .featured-games .btn--hover-text span {
+        width: 100%;
+        font-weight: 700;
+    }
 }
+
 .max-container {
     max-width: 1366px;
+    margin: 0 auto;
 }
 
 
@@ -609,45 +804,85 @@ footer .location h2 {
 @media (max-width:376px) {
     .featured-games {
         padding: 0 25px;
+        margin-top: 0;
     }
+
     .header__btn-menu {
         display: block !important;
     }
+    .team-images-one.max-container, .team-images-two.max-container, .team-images-three.max-container {
+        padding: 0 !important;
+    }
+    .team-images-one, .team-images-two, .team-images-three {
+        top: 440px;
+    }
+    .team-images-one img {
+        width: 180px !important;
+    }
+    .team-images-two img {
+        width: 130px !important;
+    }
+    .team-images-three {
+        top: 34em !important;
+    }
+    .team-images-three img {
+        width: 300px !important;
+    }
+    footer {
+        margin-top: -125px;
+        height: 100%;
+    }
+    .dream-team.max-container {
+        padding: 0 !important;
+    }
+    footer .location h2 {
+        margin-top: 30px;
+        text-align: center;
+    }
+    footer .infos .infos-left .social-links {
+        display: flex !important;
+        justify-content: space-around;
+    }
+
 }
+
 .header__btn-menu {
-    position: relative; 
-    display: inline-block; 
-    width: 30px; 
+    position: relative;
+    display: inline-block;
+    width: 30px;
     height: 30px;
 
     cursor: pointer;
 
     display: none;
 }
+
 .header__btn-menu span {
     display: block;
-    width: 35px; 
-    height: 5px; 
-    background-color: #1a2c3a; 
-    margin: 0 auto; 
-    top: 12px; 
-    border-radius: 3px; 
+    width: 36px;
+    height: 4px;
+    background-color: #1a2c3a;
+    margin: 0 auto;
+    top: 20px;
+    border-radius: 3px;
     position: relative;
 }
+
 .header__btn-menu span::before {
     margin-top: -12px;
-    width: 35px;
-    height: 5px;
+    width: 36px;
+    height: 4px;
     background-color: #1a2c3a;
     display: block;
     position: absolute;
     content: "";
     border-radius: 3px;
 }
+
 .header__btn-menu span::after {
     margin-top: 12px;
-    width: 35px;
-    height: 5px;
+    width: 36px;
+    height: 4px;
     background-color: #1a2c3a;
     display: block;
     position: absolute;
@@ -662,6 +897,7 @@ footer .location h2 {
 .header__navigation.open {
     width: calc(100% - 70px);
 }
+
 .header__navigation {
     position: fixed;
     background: #1A2C3A;
@@ -677,6 +913,7 @@ footer .location h2 {
     width: 0;
 
 }
+
 .header__logo-menu {
     opacity: .6;
     pointer-events: all;
@@ -690,9 +927,11 @@ footer .location h2 {
     height: 180px;
     margin: 0 auto 30px;
 }
+
 .menu-header-container .menu {
     list-style: none !important;
 }
+
 .menu-header-container .menu {
     flex-direction: column;
     box-orient: vertical;
@@ -704,9 +943,11 @@ footer .location h2 {
     -webkit-box-pack: justify;
     justify-content: space-between;
 }
+
 .menu-header-container .menu li {
     padding: 15px;
 }
+
 .menu-header-container .menu .menu-item a {
     font-size: 22px;
     font-weight: 900;
@@ -724,24 +965,26 @@ footer .location h2 {
 
 
 /* Responsivo 1366px */
-
+@media (min-width:400px) and (max-width:769px) {
+    .banner-principal {
+        display: block;
+    }
+}
 @media (min-width:400px) and (max-width:1367px) {
     .text-content {
-        margin-left: 75px;
+        margin-left: 70px;
     }
+
     .text-content h1 {
         width: 450px;
-    font-size: 75px;
-    line-height: 60px;
+        font-size: 75px;
+        line-height: 60px;
     }
-    .text-content h1::before {
-        bottom: 5.4em;
-        left: 80px;
 
-    }
     .banner-image img {
         width: 900px;
     }
+
     .dream-team .team {
         width: 100%;
     }
@@ -752,36 +995,72 @@ footer .location h2 {
         bottom: 80px;
         top: unset;
     }
+
     .team-images img:nth-child(2) {
         width: 800px;
         left: 290px;
         top: 335px;
     }
+
     .team-images img:nth-child(3) {
         right: 0;
         width: 315px;
         bottom: 80px !important;
         top: unset;
     }
+
     .team-images img:nth-child(4) {
         width: 770px;
         right: 250px;
         top: 330px;
     }
+
     .dream-team .btn {
         top: 140px;
     }
+
     .infos-right ul:nth-child(1) {
         margin-right: 0;
     }
+
     .infos-right {
         margin-left: 50px;
     }
+
     .infos-right ul {
         width: 160px;
     }
+
     .nav-bar ul {
         width: 100%;
         grid-gap: 20px;
     }
+}
+
+
+
+
+
+
+
+.team-images-one {
+    bottom: 0;
+    left: 0;
+}
+.team-images-two {
+    bottom: 0;
+    right: 0;
+}
+.team-images-three {
+    top: 29em;
+
+    background-image: url(./images/banner-background.png);
+    
+    background-size: cover;
+}
+
+.team-images-one,
+.team-images-two,
+.team-images-three {
+    position: absolute
 }
